[package]
name = "home_finance"
version = "0.1.0"
authors = ["AndrejKlim <tydysch@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { version = "0.18.1", features = ["with-chrono-0_4"]}
chrono = {version = "0.4.19"}
actix-web = "3.3.2"
actix-rt = "1.0"
serde = "1.0.118"
log = "0.4.11"
simple_logger = "1.6.0"